--- a/sections/1-introducao.tex
+++ b/sections/1-introducao.tex
@@ -34,7 +34,7 @@ O desenvolvimento de aplicativos apesar de contar com inúmeras ferramentas tais
 %--------------------------%
 % Este trabalho teve como objetivo o projeto, implementação e avaliação de uma arquitetura flexível e reutilizável...%
 %--------------------------%
-Este trabalho teve como objetivo o projeto, implementação e avaliação de uma arquitetura orientada a plugins e reutilizável para o desenvolvimento de sistemas de informação mobile. Dentre os benefícios desenvolvidos destaca-se uma arquitetura de plugins, que permite ao desenvolvedor implementar as funcionalidades do sistema com maior facilidade de extensão e baixo acoplamento entre os componentes que podem se comunicar através de eventos. Esta arquitetura também provê componentes de alto nível para construção de interfaces gráficas através do QML, além de componentes de alto nível para operações rotineiras como ler e salvar dados no dispositivo através de um banco de dados SQLITE, realizar requisições HTTP com suporte a autenticação básica, download e upload de arquivos e também, permite o acesso aos arquivos do sistema que são compartilhados pelo usuário (galeria de arquivos e imagens). Esta arquitetura foi projetada a fim de atender aos seguintes requisitos funcionais: Acesso a rede através de comunicação HTTP com algum serviço REST (suporte a métodos GET, POST, upload e download de arquivos), persistência de dados local via SQLITE com tabelas definidas por cada plugin, notificações de sistema (local, partindo da própria aplicação quando estiver executando), \textit{push notification} através da API do Firebase\footnote{Firebase é uma plataforma de desenvolvimento de aplicativos para dispositivos móveis desenvolvida pela Firebase, Inc. em 2011 e adquirida pela Google em 2014.}, suportando o registro do token e a exibição de notificações na bandeja do sistema.
+Este trabalho teve como objetivo o projeto, implementação e avaliação de uma arquitetura orientada a plugins e reutilizável para o desenvolvimento de sistemas de informação mobile. Dentre os benefícios desenvolvidos destaca-se uma arquitetura de plugins, que permite ao desenvolvedor implementar as funcionalidades do sistema com maior facilidade de extensão e baixo acoplamento entre os componentes que podem se comunicar através de eventos. Esta arquitetura também provê componentes de alto nível para construção de interfaces gráficas através do QML, além de componentes de alto nível para operações rotineiras como ler e salvar dados no dispositivo através de um banco de dados SQLITE, realizar requisições HTTP com suporte a autenticação básica, download e upload de arquivos e também, permite o acesso aos arquivos do sistema que são compartilhados pelo usuário (galeria de arquivos e imagens). Esta arquitetura foi projetada a fim de atender aos seguintes requisitos funcionais: Acesso a rede através de comunicação HTTP com algum serviço REST (suporte a métodos GET, POST, upload e download de arquivos), persistência de dados local via SQLITE com tabelas definidas por cada plugin, notificações de sistema (local, partindo da própria aplicação quando estiver executando), \textit{push notification} através da API do Firebase\footnote{https://firebase.google.com}, suportando o registro do token e a exibição de notificações na bandeja do sistema.
 
 
 %--------------------------%
