--- a/sections/3-trabalhos-relacionados.tex
+++ b/sections/3-trabalhos-relacionados.tex
@@ -1,4 +1,4 @@
-% Flexibilidade e extensibilidade são alguns dos pricipais requisitos não funcionais da arquitetura
+% Flexibilidade e extensibilidade são alguns dos pricipais requisitos não funcionais desta arquitetura
 % -----------------------------------------------------------
 % Adicionar pelo menos 4;
 % Adicionar uma tabela comparando as características do trabalho correlato com o meu;
@@ -8,54 +8,34 @@
 % -----------------------------------------------------------
 
 \section{TRABALHOS RELACIONADOS}
-Nesta seção, serão detalhados os trabalhos relacionados com este projeto. O detalhamento será feito com uma descrição geral do trabalho desenvolvido e como ele se relaciona com este projeto. Será considerado também os pontos fracos e fortes identificados exibidos em uma simples tabela.
+Nesta seção, serão apresentado os trabalhos relacionados com este projeto. Para cada trabalho relacionado, será descrito um resumo extraído do próprio artigo ou monografia e no final da seção, contém uma tabela que compara as principais características deste projeto com os trabalhos relacionados.\par
 
+%artigo 1%
 \textbf{Arquitetura de Referência para o Desenvolvimento de Sistemas Colaborativos Móveis Baseados em Componentes}\par
 A arquitetura de referência proposta, denominada CReAMA – \textit{Component-Based Reference Architecture for Collaborative Mobile Applications}, teve como principal objetivo orientar o desenvolvimento de sistemas colaborativos móveis baseados em componentes para a plataforma Android. Sistemas desenvolvidos de acordo com essa arquitetura, devem dar suporte ao desenvolvimento de componentes e à criação de aplicações colaborativas por meio da composição desses componentes. As aplicações e componentes são desenvolvidos para plataformas móveis, facilitando o uso de recursos inerentes a essas plataformas, tais como informações de sensores embarcados. Com base na arquitetura de referência, o desenvolvedor poderá ser guiado para criar componentes e compor novas aplicações seguindo os padrões estabelecidos. Por exemplo, será possível construir \textit{toolkits} que forneçam componentes para um domínio específico. É importante ressaltar que a arquitetura foi definida considerando-se: aspectos da plataforma móvel, de sistemas colaborativos e da própria orientação a componentes. Com relação à plataforma móvel, optou-se por uma plataforma específica, visando-se a definição de uma arquitetura otimizada para as características da respectiva plataforma. A arquitetura proposta dará suporte ao desenvolvimento de novos sistemas baseados em componentes, considerando também aspectos relativos à comunicação com a Web.
 
-O trabalho proposto por Maison Melotti se relaciona com este trabalho pelo fato de terem objetivos semelhantes, que é propor uma arquitetura para facilitar o desenvolvimento de aplicativos móveis, permitindo o reuso facilitado de componentes. Apesar de estarem focados em domínio específico, os trabalhos se relacionam no atendimento de dois requisitos funcionais, que são eles cache de dados, notificações do sistema (local e \textit{push notification}), acesso a rede (requisições HTTP) e o provimento de componentes reutilizáveis pelas aplicações baseadas na arquitetura proposta.
-
-\begin{table}[H]
-	\centering
-	\label{my-label}
-	\begin{tabular}{|l|c|c|}
-		\hline
-		\multicolumn{1}{|c|}{Recurso}                                                                 & \begin{tabular}[c]{@{}c@{}}Esta\\arquitetura \end{tabular} &
-		\begin{tabular}[c]{@{}c@{}}Arquitetura\\de Melotti\end{tabular} \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Provê suporte multiplataforma\\Desktop e Mobile (Android e iOS)\end{tabular} & Sim                                                                           & Não                                                                        \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Provê recursos extensíveis\\através de plugins\end{tabular}             & Sim                                                                           & Não                                                                        \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Provê APIs de alto nível\\(Rede, banco de dados, UI)\end{tabular}            & Sim                                                                           & Sim                                                                        \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Provê componentes reutilizáveis\end{tabular}            & Sim                                                                           & Sim                                                                        \\ \hline
-	\end{tabular}
-	\caption{Comparação entre este trabalho e o de Maison Melotti}
-\end{table}
-
 
 %artigo 2%
-\textbf{MoCA: Uma Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis}\par
+\textbf{MoCA: Arquitetura para o Desenvolvimento de Aplicações Sensíveis ao Contexto para Dispositivos Móveis}\par
 MoCA (\textit{Mobile Collaboration Architecture}) é uma arquitetura que oferece recursos para o desenvolvimento de aplicações distribuídas sensíveis ao contexto que envolvem usuários móveis. Esses recursos incluem um serviço para a coleta, armazenamento e distribuição de informações de contexto e um serviço de inferência de localização de dispositivos móveis. Além disso, a arquitetura provê APIs para o desenvolvimento de aplicações que interagem com estes servicos como consumidores de informações de contexto. Os servicos providos pela MoCA livram o programador da obrigação de implementar serviços específicos para a coleta e tratamento de contexto. O conjunto de APIs oferecidas pela MoCA para desenvolvimento de aplicações compreende tres grupos: as APIs de comunicação, que fornecem interfaces de comunicação sícrona e assícrona (baseada em eventos); as APIs principais que fornecem interfaces de comunicação com os serviços básicos da arquitetura; e as APIs opcionais que facilitam o desenvolvimento de aplicações baseadas na arquitetura cliente-servidor.\par
-
-A relação deste trabalho com a arquitetura porposta em MoCA pode ser entendida pelo uso dos estilos arquiteturais \textit{Event Based} e \textit{Cliente Servidor}. Além provê APIs de alto nível para operações de rede (HTTP), persistência de dados no dispositivo e notificação do sistema. No entando, MoCa foi construído para trabalhar com um servidor próprio, atendendo requisições específicas de seu domínio, enquanto que esta arquitetura propõe um modelo de comunicação cliente servidor através de serviços RESTFul. A tabela a seguir comparar os principais recursos desta arquitetura com o modelo proposta em MoCA.
-
-\begin{table}[H]
-	\centering
-	\label{my-label}
-	\begin{tabular}{|l|c|c|}
-		\hline
-		\multicolumn{1}{|c|}{Recurso}                                                                 & \begin{tabular}[c]{@{}c@{}}Esta\\arquitetura \end{tabular} &
-		\begin{tabular}[c]{@{}c@{}}Arquitetura\\MoCA\end{tabular} \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Provê suporte multiplataforma\\Desktop e Mobile (Android e iOS)\end{tabular} & Sim                                                                           & Não                                                                        \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Provê recursos extensíveis\\através de plugins\end{tabular}             & Sim                                                                           & Não                                                                        \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Provê APIs de alto nível\\(Rede, banco de dados, UI)\end{tabular}            & Sim                                                                           & Sim                                                                        \\ \hline
-		\begin{tabular}[c]{@{}l@{}}Provê componentes reutilizáveis\end{tabular}            & Sim                                                                           & Não                                                                        \\ \hline
-	\end{tabular}
-	\caption{Comparação entre este trabalho e o de Maison Melotti}
-\end{table}
 
 
 %artigo 3%
-\textbf{Uma Arquitetura de Referência para Sistemas de Informação e Portais de Serviços de Governo Eletrônico}\par
-A proposta dessa arquitetura objetiva solucionar os problemas de padronização, integração e gerenciamento das informações inerentes aos sistemas de informação dos órgãos públicos, a fim de reduzir custos e aumentar a qualidade dos sistemas governamentais. Para isso, foi desenvolvido uma arquitetura de referência para os sistemas de informação e portais de serviços do governo. A arquitetura proposta visa atender aos requisitos de projetos em sistemas de informação que possam ser representados em aplicações tanto em ambiente Web quanto para o ambiente Desktop offline. O modelo arquitetural proposto foi empregado no contexto das aplicações offline da Plataforma Lattes, a saber: o Sistema de Currículo Lattes e o Sistema de Grupos de Pesquisas. Dentre os requisitos não funcionais atendidos pela arquitetura proposta, destaca-se: Mesmo método de desenvolvimento de aplicações para as aplicações Web e Desktop; Consumo minimalista dos recursos; Alto grau de independência de tecnologias de terceiros e Crescimento dinâmico de funcionalidades através de plugins. A arquitetura impõe uma restrição: o uso do padrão MVC, pois fornece módulos abstratos para as camadas de dados, comunicação e visualização o qual deve ser utilizados para criar uma instância da arquitetura e ser aplicada em um novo sistema construído acima dessa arquitetura.
+\textbf{Solução Multiplataforma para Smartphone Utilizando os Frameworks SenchaTouch e PhoneGap Integrado à Tecnologia WEB Service Java}\par
+O trabalho teve como objetivo principal, realizar análise e estudo sobre as tecnologias de desenvolvimento de aplicativos móveis multiplataforma, utilizando a junção dos frameworks PhoneGap e Sencha Touch. Os aplicativos desenvolvidos usando o PhoneGap são aplicações híbridas onde partes do aplicativo, principalmente a interface do usuário, a lógica da aplicação e a comunicação com um servidor, é baseado em HTML, Javascript e CSS. A outra parte, que se comunica com o sistema operacional do dispositivo é baseada no idioma nativo de cada plataforma, ou seja, \textit{Java} no android e \textit{Objective C} no iOS. O estudo propôs uma modelagem facilitada de integração com outro sistema por meio de serviços web, através de uma aplicação RestFul utilizando Java EE. Com a análise das ferramentas e tecnologias levantadas, pode-se concluir que o desenvolvimento de aplicativos utilizando os frameworks PhoneGap e Sencha Touch tem muitas vantagens. Uma delas é a facilidade de portar o aplicativo para qualquer plataforma móvel. O  PhoneGap dispõe uma arquitetura MVC e diversos componentes para acesso a recursos do dispositivo, como câmera, acelerômetro e GPS através de objetos Javascript. O Sencha Touch dispõe de objetos focado em UI, principalmente suporte a eventos de toque na tela.\par
 
 
-%artigo 5%
+\begin{table*}[t]
+\centering
+\begin{tabular}{|c|c|c|c|c|c|}
+\hline
+Recurso & Este trabalho & CReAMA & MoCA & PhoneGap &  \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte multiPlataforma\\ mobile Android e iOS\end{tabular} & Sim & Não & Não & Sim &  \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ Plataforma Desktop\end{tabular} & Sim & Sim & Não & Não &  \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê recursos extensíveis\\ através de plugins\end{tabular} & Sim & Não & Não & Não &  \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê APIs de alto nível para recursos\\ de Rede (HTTP), banco de dados e UI\end{tabular} & Sim & Não & Sim & Sim &  \\ \hline
+\begin{tabular}[c]{@{}c@{}}Provê suporte a\\ reuso de componentes\end{tabular} & Sim & Sim & Sim & Sim &  \\ \hline
+\end{tabular}
+\caption{Tabela comparativa dos recursos desta arquitetura com os trabalhos relacionados}
+\label{my-label}
+\end{table*}
